--- a/mypy.ini
+++ b/mypy.ini
@@ -6,3 +6,6 @@ plugins = numpy.typing.mypy_plugin
 
 [mypy-nba_api.*]
 ignore_missing_imports = True
+
+[mypy-sklearn.*]
+ignore_missing_imports = True
