--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,7 @@ python_version = 3.8
 strict = True
 namespace_packages = True
 plugins = numpy.typing.mypy_plugin
+show_error_codes = True
 
 [mypy-nba_api.*]
 ignore_missing_imports = True
