--- a/mypy.ini
+++ b/mypy.ini
@@ -10,3 +10,6 @@ ignore_missing_imports = True
 
 [mypy-sklearn.*]
 ignore_missing_imports = True
+
+[mypy-seaborn.*]
+ignore_missing_imports = True
